# nodestream-plugin-github

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  pytest.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yaml
nodestream_github/: __init__.py  audit.py  github_audit.yaml  github_organizations.yaml  github_repos.yaml  github_teams.yaml  github_users.yaml  orgs.py  repos.py  teams.py  users.py
nodestream_github/client/: githubclient.py
nodestream_github/interpretations/relationship/: repository.py  user.py
nodestream_github/logging/: __init__.py
nodestream_github/transformer/: repo.py
nodestream_github/types/: __init__.py
nodestream_github/util/: __init__.py  githubclient.py  logutil.py  permissions.py  simplify.py  types.py
tests/: conftest.py  coverage.json  test_audit.py  test_branchprotection.py  test_orgs.py  test_repos.py  test_teams.py  test_users.py
tests/client/: test_githubclient.py
tests/data/: audit.py  orgs.py  repos.py  teams.py  users.py  util.py  webhooks.py
tests/interpretations/relationship/: test_repository.py  test_user.py
tests/mocks/: githubrest.py
tests/transformer/: test_repo.py  test_repo_team_collab.py  test_repo_user_collab.py
tests/util/: coverage.json  test_githubclient.py
